<resources>
    <string name="app_name">SmartAlert</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="post_address">Post address</string>
    <string name="phone_number">Phone number</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="username_login">Username</string>
    <string name="password_login">password</string>
    <string name="Language">Language</string>
</resources>